standardize image operations on Point class